fixed nav styling on mobile

--- a/client/src/components/Footer/Footer.css
+++ b/client/src/components/Footer/Footer.css
@@ -7,6 +7,7 @@
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     font-size: 16pt; 
     font: #f6f5f5;
+    position: absolute; 
   }
 
 p {
@@ -15,3 +16,9 @@ p {
   font: #f6f5f5;
 }
 
+@media only screen and (max-width: 768px) {
+  /* For mobile phones: */
+  .footer {
+    position: sticky;
+  }
+}
